--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="Burh">
 <section class="Hello">
    <div class="aligned">
-       <img src="Polaroid2.png">
+       <img src="img/Polaroid2.png">
    </div>
    <span>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda n
@@ -46,7 +46,7 @@
 </section>
 <div class="grid">
     <div class="project">
-        <img src="History-of-Medieval-England_6.jpg">
+        <img src="img/History-of-Medieval-England_6.jpg">
         <h1 class ="Title">>Visualization of Core Income</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipi
         sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
@@ -57,7 +57,7 @@
         </p>
     </div>
     <div class="project">
-        <img src="Finance (1) (1).jpg">
+        <img src="img/Finance (1) (1).jpg">
         <h1 class ="Title">>Medieval England Visualization</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipi
         sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
@@ -68,7 +68,7 @@
         </p>
     </div>
     <div class="project">
-        <img src="MedEng.jpg">
+        <img src="img/MedEng.jpg">
         <h1 class ="Title">>Medieval England Visualization</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipi
         sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
@@ -78,7 +78,7 @@
           Skills: D3.jS, Leaflet.js  
         </p></div>
     <div class = "project">
-        <img src="MedEng.jpg">
+        <img src="img/MedEng.jpg">
         <h1 class ="Title">>Medieval England Visualization</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipi
         sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
