--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a class="Logo">William Wang, CPA</a>
     <div class="Socials">
         
-        <a href="https://www.instagram.com/ariellebryn/" target="_blank"><img src="instagram - Copy.svg"></a>
+        <a href="https://www.instagram.com/arellebryn/" target="_blank"><img src="instagram - Copy.svg"></a>
         <a href="https://www.linkedin.com/in/williamwang97/" target="_blank"><img src="linkedin.svg"></a>
         <a href="https://www.linkedin.com/in/williamwang97/" target="_blank"><img src="twitter.svg"></a>
     </div>
