--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="project">
         <img src="img/Finance (1) (1).jpg">
-        <h1 class ="Title">>Medieval England Visualization</h1>
+        <h1 class ="Title"><a href="project/core/index.html">>Medieval England Visualization</a></h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipi
         sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
         reprehenderit unde sit tempore atque aut commodi quae expedita corrupti, di
