with '#' will be ignored, and an empty message aborts the commit. Good MEssage On branch main

--- a/project/Core/index.html
+++ b/project/Core/index.html
@@ -48,7 +48,7 @@
             only infuriate its entire accounting team), the adjustment would be supplementary income.
             <br>
             <br>
-            With some <span style="color:rgb(40, 112, 245);font-weight:bold;text-decoration: underline;">HTML</span> and <span style="color:rgb(252, 58, 58); font-weight:bold;text-decoration:underline">CSS</span>, I"ve created a visualization that walks down Core Income to Supplementary Income, all the way down to Comprehensive Income. Clicking on each box will give an explanation of
+            With some <span style="font-weight:bold;text-decoration: underline;">HTML</span> and <span style="font-weight:bold;text-decoration:underline">CSS</span>, I"ve created a visualization that walks down Core Income to Supplementary Income, all the way down to Comprehensive Income. Clicking on each box will give an explanation of
             each line item.
             <!--https://www.journalofaccountancy.com/issues/2007/feb/changesinaccountingforchanges.html-->
             
