hello On branch main

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <a class="Logo">William Wang, CPA</a>
     <div class="Socials">
         
-        <a href="https://www.instagram.com/rellebryn/" target="_blank"><img src="instagram - Copy.svg"></a>
+        <a href="https://www.instagram.com/rellebryn/" target="_blank"><img src="instagram.svg"></a>
         <a href="https://www.linkedin.com/in/williamwang97/" target="_blank"><img src="linkedin.svg"></a>
-        <a href="https://www.linkedin.com/in/williamwang97/" target="_blank"><img src="twitter.svg"></a>
+        <a href="mailto:whw54@cornell.edu"><img src="img/mail.png"></a>
     </div>
     <!--
     <nav>
@@ -35,9 +35,17 @@
        <img src="img/Polaroid2.png">
    </div>
    <span>
-       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda n
-       sciunt labore magni molestias officiis suscipit, quisquam distinctio aperiam aliquid possimus repreh
-       enderit quaerat, amet pariatur optio atque consectetur minima ad repudiandae!
+       <b>Hi, my name is William!</b>
+       <br>
+    
+       <p>
+       I work as a financial analyst at <b>Nexamp</b>, a fast growing solar company, where I work on cross-functional finance projects. I previous worked at <b>Ernst and Young</b>,
+       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I like to work on data visualizations and creative coding projects.
+        </p>
+
+        <p>
+        You can reach out to me at <b>whw54@cornell.edu</b> for any inquiries
+     </p>
    </span>
 </section>
 </div>
@@ -46,47 +54,38 @@
 </section>
 <div class="grid">
     <div class="project">
-        <img src="img/History-of-Medieval-England_6.jpg">
-        <h1 class ="Title">>Visualization of Core Income</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipi
-        sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
-        reprehenderit unde sit tempore atque aut commodi quae expedita corrupti, di
-        gnissimos architecto. Eius, maiores ad?</p>
+        <img src="img/Shohei Ohtani.webp">
+        <h1 class ="Title"><a href="https://prospects.williamhwang.me">>Dynamic Baseball List</a></h1>
+        <p>I hacked this together using javascript, to create an interactive list that lets you filter, expand, and collapse player burbs, while coming up with 
+            some fun icons to classify players. This was inspired by some of the fun lists posted by TheRinger, ESPN, etc the past few years.
+        </p>
         <p class="skills">
-          Skills: Finance, Javascript 
+          Skills: Writing, Javascript 
         </p>
     </div>
+    <div class="project">
+        <img src="img/Solar.jpg">
+        <h1 class ="Title"><a href="https://valcalculator.williamhwang.me">>Valuation Calculator</a></h1>
+        <p>I created an interactive valuation model that values a new business line for a solar company. It implements a DCF model that takes inputs from customers acquired, revenue rate, cost of capital to come up with a $ value of the line.</p>
+        <p class="skills">
+          Skills: Javascript, DCF Modeling 
+        </p></div>
     <div class="project">
         <img src="img/Finance (1) (1).jpg">
-        <h1 class ="Title"><a href="project/core/index.html">>Medieval England Visualization</a></h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipi
-        sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
-        reprehenderit unde sit tempore atque aut commodi quae expedita corrupti, di
-        gnissimos architecto. Eius, maiores ad?</p>
+        <h1 class ="Title"><a href="project/core/index.html">>Core Income Overview</a></h1>
+        <p>I created a simple interactive visualization that explains each line item of core income, from revenue to expenses to net income. This leverages vanilla javascript to mimic a financial statement when explaining the core income concept.</p>
         <p class="skills">
-          Skills: D3.jS, Leaflet.js  
+          Skills: Javascript, Finance  
         </p>
     </div>
-    <div class="project">
-        <img src="img/MedEng.jpg">
-        <h1 class ="Title">>Medieval England Visualization</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipi
-        sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
-        reprehenderit unde sit tempore atque aut commodi quae expedita corrupti, di
-        gnissimos architecto. Eius, maiores ad?</p>
-        <p class="skills">
-          Skills: D3.jS, Leaflet.js  
-        </p></div>
     <div class = "project">
-        <img src="img/MedEng.jpg">
-        <h1 class ="Title">>Medieval England Visualization</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipi
-        sicing elit. Esse aliquid laboriosam minima ex praesentium recusandae 
-        reprehenderit unde sit tempore atque aut commodi quae expedita corrupti, di
-        gnissimos architecto. Eius, maiores ad?</p>
+        <img src="img/Utility.jpg">
+        <h1 class ="Title"><a href="https://leafletheat.williamhwang.me/">>Nexamp Geo Visualization</a></h1>
+        <p>This is a geographic visualization of limited sample of projects that Nexamp has as of June 2021, and creates a heat map by KWs DC in power. These projects are mostly found in the Northeast, and supply power to grids such as NYSEG, Central Maine Power, Eversource etc.</p>
         <p class="skills">
-          Skills: D3.jS, Leaflet.js  
+          Skills: Leaflet.js
         </p></div>
+    <!--
     <div>Consequatur dolore, architecto quos saepe consequuntur libero minus totam? Enim optio provident commodi corporis officiis, sunt maiores? Cupiditate consequuntur, cumque natus corporis velit sunt ad magni aliquid facere deleniti molestiae.</div>
     <div>Voluptatibus similique modi voluptatum voluptatem quo quod minima ducimus facere, sequi libero accusamus nisi nobis? Minima error tempore quo esse quod odit, deleniti labore nulla ullam velit nemo neque sint!</div>
     <div>Qui, corporis delectus? Pariatur vel autem commodi, accusantium, voluptate obcaecati iste, a debitis facilis repellendus mollitia. Dolore dicta totam, quaerat omnis accusantium magni alias voluptates eligendi ex id aut dolorem?</div>
@@ -94,6 +93,7 @@
     <div>Dolorem saepe accusamus sed placeat porro ex, ab, vel eaque libero incidunt facilis delectus, iure odio dicta error consequuntur perspiciatis quasi? Corrupti incidunt quia asperiores quo magnam at minima laudantium?</div>
     <div>Dolor ad saepe, nemo fugit tempora autem est fugiat quis porro atque nam repellendus maxime neque voluptatem rerum amet odit aspernatur voluptates iusto eos laboriosam enim vel. Eius, debitis beatae!</div>
     </div>
+    -->
 </div>
 </body>
 </html>
