--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a class="Logo">William Wang, CPA</a>
     <div class="Socials">
         
-        <a href="https://www.instagram.com/rellebryn/" target="_blank"><img src="instagram.svg"></a>
+        <a href="https://www.instagram.com/williamhao_20/" target="_blank"><img src="instagram.svg"></a>
         <a href="https://www.linkedin.com/in/williamwang97/" target="_blank"><img src="linkedin.svg"></a>
         <a href="mailto:whw54@cornell.edu"><img src="img/mail.png"></a>
     </div>
