Virgin Galactic Edit

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 </section>
 <div class="grid">
     <div class="project">
+        <img src="img/Virgin Galactic.jpg">
+        <h1 class ="Title"><a href="https://www.dropbox.com/s/r9h0w7y9zznfumd/Valuation%20of%20Virgin%20Galactic.pdf?dl=1">>DCF Valuation Virgin Galactic</a></h1>
+        <p>As part of my training at EY in 2020, I dived into a valuation of Virgin Galactic, the space tourism company, using a DCF model. 
+           You can download a PDF of my work by clicking the link above (As a note, I would not use a DCF model today to value Virgin Galactic)
+        </p>
+        <p class="skills">
+          Skills: Valuation, Writing
+        </p>
+    </div>
+    <div class="project">
         <img src="img/Shohei Ohtani.webp">
         <h1 class ="Title"><a href="https://prospects.williamhwang.me">>Dynamic Baseball List</a></h1>
         <p>I hacked this together using javascript, to create an interactive list that lets you filter, expand, and collapse player burbs, while coming up with 
