--- a/project/Core/index.html
+++ b/project/Core/index.html
@@ -68,42 +68,47 @@
         </div>
         <button type="button" class="collapsible" style="background:#ceecfd"><b>(=) Core Gross Margin</b></button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Core Gross Margin equals the removal of expenses that drive Core Revenue</p>
         </div>
         <!--Core Operating Income from Sales-->
         <button type="button" class="collapsible">(-) Core Operating Expenses</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Core Operating Expenses are expenses related to supporting, but not driving, Core Revenues. In regards to the apple cider making example, these expenses
+                would be related to administrative functions to support cider making. 
+            </p>
         </div>
         <!--Core Operating Income-->
         <button type="button" class="collapsible" style="background:#ceecfd"><b>(=) Core Operating Income</b></button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Core Operating Income is found by subtracting core operating expenses from Core Gross Margin. To get from Core Operating Income to Comprehensive Income, which shows
+                a full reflection of all the financial expenses/income that a business incurs, you have to take into account ancillary items as the ones below.
+            </p>
         </div>
         <!--Unusual items-->
-        <button type="button" class="collapsible">(-) Asset Write Downs</button>
+        <button type="button" class="collapsible">(-) Inventory Write Downs</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>When Inventory is lost/impaired, companies write them down to reflect the true value of these assets. </p>
         </div>
-        <button type="button" class="collapsible">(+-) Profits and lsoses from asset sales</button>
+        <button type="button" class="collapsible">(+-) Profits and losses from asset sales</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Selling off assets in closing business lines would be an example of this. For the Apple Cider Business, if you closed a business line to say, foreign apple sales, any assets in that business (inventory, for instance) would be part of this.</p>
         </div>
         <button type="button" class="collapsible">(+-) Extraordinary Operating Items</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>These would be related to items that are both unusual and unlikely to reoccur in the future, and not part of the company's day to day operations. Examples include Natural disasters, repayment of debt, and write off of intangible assets.</p>
         </div>
         <button type="button" class="collapsible">(+-) Accounting Changes</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>When a company changes how its calculates certain items (FIFO to LIFO for Inventory calculation), those gains/losses will be reflect here.</p>
         </div>
         <button type="button" class="collapsible">(+-)  Unrealized Gains and Losses on Equity Investments</button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>These refer to value changes in investments (stocks) for instance. If a company bought the stocks of another company to better deploy their cash elsewhere, the change in value there 
+                would be reflected here. </p>
         </div>
         <button type="button" class="collapsible">(+-) Other </button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>These can refer to EMI investments (Income from 20-50% ownership of a company), currency translation adjustments, etc</p>
         </div>
         <button type="button" class="collapsible" style="background:#ceecfd"><b>(=) Comprehensive Operating Income</b></button>
         <div class="content">
