--- a/project/Core/index.html
+++ b/project/Core/index.html
@@ -112,7 +112,7 @@
         </div>
         <button type="button" class="collapsible" style="background:#ceecfd"><b>(=) Comprehensive Operating Income</b></button>
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>These comprehensive items, added to Core Operating Income, equals Comprehensive Operating Income.</p>
         </div>
        
         
