--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
        <br>
     
        <p>
-       I work as a financial analyst at <b>Nexamp</b>, a fast growing solar company, where I work on cross-functional finance projects. I previously worked at <b>Ernst and Young</b>,
-       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I like to work on data visualizations and creative coding projects.
+       I work as a financial analyst at <b>Nexamp</b>, a fast growing renewables company, where I work on cross-functional finance projects. I previously worked at <b>Ernst and Young</b>,
+       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I work on data visualizations and write a newsletter on the Space Industry, <a href="https://t.co/jsnj1fwN8y"></a>Lunar Opposites.
         </p>
 
         <p>
