--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
        <p>
        I work as a financial analyst at <b>Nexamp</b>, a fast growing renewables company, where I work on cross-functional finance projects. I previously worked at <b>Ernst and Young</b>,
-       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I work on data visualizations and write a newsletter on the Space Industry, <a href="https://t.co/jsnj1fwN8y">Lunar Opposites</a>.
+       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I work on data visualizations and write about American Dynamism though my substack, <a href="https://inmotion.substack.com/">In Motion</a>.
         </p>
 
         <p>
