--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
        <br>
     
        <p>
-       I work as a senior analyst at <b>JPMorgan Chase</b> in their Corporate Client Banking division, where I focus on industrial and wellness companies. I previously worked at <b>Nexamp</b>, a fast growing renewables company, where I worked on cross-functional finance initiatives. I also previously worked at <b>Ernst and Young</b>,
-       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I work on data visualizations and write about American Dynamism though my substack, <a href="https://inmotion.substack.com/">In Motion</a>.
+       I work as a senior analyst at <b>JPMorgan Chase</b> in their Corporate Client Banking division, where I focus on industrial, renewable, and defense companies. I previously worked at <b>Nexamp</b>, a fast growing renewables company, where I worked on cross-functional finance initiatives. I also previously worked at <b>Ernst and Young</b>,
+       where I got my CPA; before that, I studied at <b>Cornell University</b> to get my degree in business. In my free time, I work on data visualizations and write about business though my substack, <a href="https://inmotion.substack.com/">In Motion</a>.
         </p>
 
         <p>
