--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li><a class="navbar" href="https://www.linkedin.com/in/williamwang1963/">Linkedin</a></li>
         <li><a > / </a></li>
         <li><a class="navbar" href="https://curius.app/william-wang">Curius </a></li>
+        <li><a > / </a></li>
+        <li><a class="navbar" href="mailto:whw54@cornell.edu">Email me! </a></li>
        
       </ul>
      
