--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <img src="Resources/Ohtani.jpg">
 
        
-            <p><a class="navbar" href="https://www.dropbox.com/s/r9h0w7y9zznfumd/Valuation%20of%20Virgin%20Galactic.pdf?dl=1"> 
+            <p><a class="navbar" href="https://prospects.williamhwang.me/"> 
                 > Dynamic Baseball List</a>
             </p>
     
