--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@
    </div>
 <div class="bottom">
    <div class="gallery">
-    <h2>Writings</h2>
 
+    <h2>Projects</h2>
+<div class="flex-grid">
+
+        <div class="col">
+        <li> <h3> <a href="https://www.dropbox.com/scl/fi/inuwkzb6f9a9u4vtvtmt1/Poseidon_Deck_WW.pdf?rlkey=eycotcwaphw94ocqcebl2mby9&st=unisp44x&dl=1">(★) Pricing case study for autonomous wildfire aircraft </a> </h3></li>
+        </div>
+      </div>
+    
+<br> 
+
+    <h2>Writings</h2>
 
     <div class="flex-grid">
 
