--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="flex-grid">
 
         <div class="col">
-        <li> <h3> <a href="https://www.dropbox.com/scl/fi/inuwkzb6f9a9u4vtvtmt1/Poseidon_Deck_WW.pdf?rlkey=eycotcwaphw94ocqcebl2mby9&st=unisp44x&dl=1">(★) Pricing case study for autonomous wildfire aircraft </a> </h3></li>
+        <li> <h3> <a href="https://www.dropbox.com/scl/fi/inuwkzb6f9a9u4vtvtmt1/Poseidon_Deck_WW.pdf?rlkey=eycotcwaphw94ocqcebl2mby9&st=unisp44x&dl=1">(★) Case study on autonomous wildfirefighting </a> </h3></li>
         </div>
       </div>
     
