--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
      <p>
         I currently  work as a Corporate Development Associate at <a href="https://synthica.com/" style="text-decoration: none;color: black;" ><b>Synthica Energy</b></a>, a 
         startup that develops renewable natural gas. 
-        I also write about the current interregnum at my substack <a href="https://inmotion.substack.com/" style="text-decoration: none;color: black;"><b>"In Motion"</b></a>.
+        I also write about hardware and industrials at my substack <a href="https://inmotion.substack.com/" style="text-decoration: none;color: black;"><b>"In Motion"</b></a>.
         <br>
         <br>
          Previously, I was a senior analyst at <b>JPMorgan Chase</b> in their Corporate Client Banking division, 
-        where I focused on industrial, renewable, and defense companies, and a
+        where I focused on aerospace, industrial, and defense companies, and a
         finance analyst at <b>Nexamp</b>, 
         a fast growing community solar company, where I worked on cross-functional finance initiatives. 
         I began my career at <b>Ernst and Young</b>, where I got my CPA; 
-        before that, I studied at Cornell University to get my degree in business. 
+        before that, I studied at Cornell University to get my degree in finance. 
        <br>
        <br>
-        In my free time, I'm trying to work my way around Plato and add to my photos collection!
+        In my free time, I'm trying to work my way around Hilary Mantel and add to my photos collection!
     </p>
 
    </div>
