--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <div class="col">
         <li> <h3> <a href="https://www.dropbox.com/scl/fi/inuwkzb6f9a9u4vtvtmt1/Poseidon_Deck_WW.pdf?rlkey=eycotcwaphw94ocqcebl2mby9&st=unisp44x&dl=1">(★) GTM case study for Anduril </a> </h3></li>
         </div>
+
+        
+        <div class="col">
+        <li> <h3> <a href="https://macro-dashboard-c7tkm2gh2jes2wp5uawdkf.streamlit.app/">(★) Macro indicators dashboard </a> </h3></li>
+        </div>
       </div>
     
 <br> 
