--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <p>
         I currently  work as a Corporate Development Associate at <a href="https://synthica.com/" style="text-decoration: none;color: black;" ><b>Synthica Energy</b></a>, a 
         startup that develops renewable natural gas. 
-        I also write about hardware and industrials at my substack <a href="https://inmotion.substack.com/" style="text-decoration: none;color: black;"><b>"In Motion"</b></a>.
+        I also write about being a startup operator at my substack <a href="https://inmotion.substack.com/" style="text-decoration: none;color: black;"><b>"In Motion"</b></a>.
         <br>
         <br>
          Previously, I was a senior analyst at <b>JPMorgan Chase</b> in their Corporate Client Banking division, 
@@ -65,7 +65,7 @@
     <div class="flex-grid">
 
        <div class="col">
-        <li> <h3> <a href="https://inmotion.substack.com/p/on-how-to-be-yourself">(★) On how to be yourself</a> </h3></li>
+        <li> <h3> <a href="https://inmotion.substack.com/p/a-year-around-the-sun-at-my-startup">(★) A year around the sun at my startup job</a> </h3></li>
          
         </div>
 
